2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
	Bug #1656433

2007-02-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/plot.c (main): Flag 'interactive' not reset to FALSE after running
	command "gnuplot - nonExistingScript.gp". On some platforms, gnuplot
	cannot 'exit' and goes to an infinite loop after Ctrl-D.
	Bug #1612995 

2007-02-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Add a dummy label for "3 data style" to avoid bug
	in doc2gih (try "help contour").

2007-02-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c (eval_3dplots): Improved message for non-grid data. 

2007-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (ENHGD_FLUSH): libgd 2.0.34 will allow explicit request
	for Adobe Symbol font encoding.  Make use of this to handle transient
	use of Symbol font in enhanced text.  Does not affect older gd versions.

2007-01-29  Per Persson <persquare@mac.com>

	* configure.in: Testing libreadline for remove_history presence 
	instead of readline to avoid incompatible libedit wrapper.
	
2007-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm: Typo in docs.

2007-01-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (build_networks): Add checks in the hidden3d code to
	cleanly skip empty plots.  This fix went into the trunk CVS 2 months
	ago, but apparently is needed in 4.2 also (test case provided by a
	user).

2007-01-23  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: The libreadline checks got mangled. Bad patch?
	This fixes the breakage, and adds a warning if gd.h is not found.

	* PATCHLEVEL src/version.c configure.in:
	Tag and package as release candidate 4.2-rc4

2007-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL src/version.c configure.in:
	Tag and package as release candidate 4.2-rc3

2007-01-22  Petr Mikulik  <mikulik@physics.muni.cz>
